tests/cases/standard-library/errors/prelude/prelude-macro-nonprelude-qualified.ari
mod other {
}

fn main() -> i64 {
  other::format!("value={}", 1);
  return 0;
}
